# expansao-ai-climate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: zhora_api.py
app/: main.py
app/routes/: climate_alerts.py  collect.py  zhora.py
app/services/: climate_alert_engine.py  climate_alert_repository.py  slack_service.py  zhora_service.py
collector/: blog_generator.py  knowledge_collector.py  mjo_collector.py  noaa_amo_collector.py  noaa_co2_collector.py  noaa_iod_collector.py  noaa_nao_collector.py  noaa_oni_collector.py  noaa_pdo_collector.py  noaa_psl_base.py  noaa_qbo_collector.py  noaa_soi_collector.py  noaa_sst_collector.py  nsidc_ice_collector.py  usgs_seismic_collector.py
dashboard/: app.js  index.html  style.css
database/: db.py
database/sql/: 001_schema.sql  002_clima_031.sql  003_clima_032.sql  004_clima_036_iod.sql  005_clima_seismic.sql  README.md
n8n/: workflow_coleta_diaria.json  workflow_coleta_mensal.json
tests/: conftest.py  test_climate_alert_engine.py  test_save_alerts.py
