[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "climate"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "app*", "collector*", "database*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a live PostgreSQL database (deselect with -m 'not integration')",
]
